@@ -62,6 +62,7 @@
             {
                 // CSS and JavaScript
                 builder.RegisterType<FrontEndFrameworkFeature>().As<IFeature>().SingleInstance();
+                builder.RegisterType<TypeScriptFeature>().As<IFeature>().SingleInstance();
                 builder.RegisterType<JavaScriptTestFrameworkFeature>().As<IFeature>().SingleInstance();
             }
 
