@@ -42,6 +42,12 @@
                         <input name="PreRequisites-UpdateDNVM" type="checkbox"> <strong>Update Visual Studio ASP.NET 5 Tools and DNVM</strong> -
                         Update the Visual Studio ASP.NET 5 tools and the DNVM to Beta 7. Find out more <a href="http://blogs.msdn.com/b/webdev/archive/2015/09/02/announcing-availability-of-asp-net-5-beta7.aspx">here</a>.
                     </li>
+                    <!-- $Start-TypeScript$ -->
+                    <li class="list-group-item">
+                        <input name="PreRequisites-UpdateTypeScript" type="checkbox"> <strong>Update TypeScript</strong> -
+                        Update the TypeScript extension from the Tools -> Extensions and Updates menu.
+                    </li>
+                    <!-- $End-TypeScript$ -->
                 </ul>
             </article>
 
