@@ -1,4 +1,5 @@
-﻿Comments are not allowed in the bower.json file, so they are added here.
+﻿Comments are not allowed in the bower.json file (See http://blog.getify.com/json-comments/ for why this is silly), so 
+they are added here.
 
 The bower.json file is responsible for the installing the styles (CSS, LESS, etc.) and scripts (JavaScript, TypeScript 
 etc.) using <a href="http://bower.io/">Bower</a>. See the official 
