@@ -1,4 +1,5 @@
-﻿Comments are not allowed in the config.json file, so they are added here.
+﻿Comments are not allowed in the config.json file (See http://blog.getify.com/json-comments/ for why this is silly), so
+they are added here.
 
 The config.json file is responsible for holding application settings and options. It is the replacement for the 
 appSettings configuration section contained in the web.config file in ASP.NET 4.6.
