@@ -1,4 +1,5 @@
-﻿Comments are not allowed in the package.json file, so they are added here.
+﻿Comments are not allowed in the package.json file (See http://blog.getify.com/json-comments/ for why this is silly), so
+they are added here.
 
 The package.json file is responsible for installing <a href="https://www.npmjs.com/">npm</a> packages. See the official 
 <a href="https://docs.npmjs.com/files/package.json">package.json specification</a> for more information.
